# android_imgui_surface_mod_menu_template

./: .gitignore  README.md  build.gradle  license.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/muffin/imgui/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Muffin.cpp
app/src/main/cpp/includes/: DrawUtils.h  Globals.h  Hooks.h  Menu.h  Natives.h
app/src/main/cpp/misc/: Obfuscate.h
app/src/main/cpp/misc/imgui/: MyFont.hpp  imgui.h  imgui_draw.cpp
app/src/main/cpp/misc/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h
app/src/main/java/org/muffin/imgui/: App.java  GoogleMobileAdsConsentManager.java  MainActivity.java
app/src/main/java/org/muffin/imgui/muffin/: Muffin.java  MuffinService.java  MuffinSurface.java
app/src/main/res/layout/: activity_main.xml  ad_unified.xml
app/src/main/res/menu/: action_menu.xml  popup_menu.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/muffin/imgui/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
